<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etContra"
        android:layout_width="386dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:hint="@string/etcontra"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvtitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="386dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etdocumento"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="386dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/etnombres"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="386dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:hint="@string/etapellidos"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="386dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/etusuario"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="387dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContra" >

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="188dp"
            android:layout_height="48dp"
            android:text="@string/btnregistrar" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/btnbuscar" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="387dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" >

        <Button
            android:id="@+id/btnListar"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:text="@string/btnlistarRegistros" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/btnLimpiar" />
    </TableRow>

    <ListView
        android:id="@+id/lvLista"
        android:layout_width="377dp"
        android:layout_height="282dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2" />




</androidx.constraintlayout.widget.ConstraintLayout>